Changes to users

--- a/Gilbert/src/main/resources/i18n/messages.properties
+++ b/Gilbert/src/main/resources/i18n/messages.properties
@@ -22,10 +22,12 @@ auth.login.submitLoginLabel=Login
 
 auth.register.title=Register
 auth.register.header=Register
-auth.register.usernameLabel=Username
+auth.register.displayNameLabel=Display Name
+auth.register.displayNameDescription=Your public display name
 auth.register.emailLabel=Email
+auth.register.emailDescription=The email you want to use with Gilbert
 auth.register.passwordLabel=Password
-auth.register.dateOfBirthLabel=Birthdate
+auth.register.passwordDescription=At least 8 characters, including at least one capital letter and one number
 auth.register.submitRegistrationLabel=Register
 
 profile.title=Profile
