Register and log in now works

--- a/Gilbert/src/main/resources/i18n/messages.properties
+++ b/Gilbert/src/main/resources/i18n/messages.properties
@@ -28,6 +28,7 @@ auth.register.emailLabel=Email
 auth.register.emailDescription=The email you want to use with Gilbert
 auth.register.passwordLabel=Password
 auth.register.passwordDescription=At least 8 characters, including at least one capital letter and one number
+auth.register.termsDescription=I accept the terms and conditions, hereby also confirming I'm over 18 years old
 auth.register.submitRegistrationLabel=Register
 
 profile.title=Profile
