Updated login stuff

--- a/Gilbert/src/main/resources/i18n/messages.properties
+++ b/Gilbert/src/main/resources/i18n/messages.properties
@@ -12,11 +12,14 @@ navigation.notificationsAlt=notifications icon
 
 auth.title=Login or register
 auth.header=Login or register
+auth.emailLabel=Email
+auth.emailErrorLabel=Please enter a valid email address
 auth.submit=Continue
 
 auth.login.title=Login
 auth.login.header=Login
 auth.login.emailLabel=Email
+auth.login.emailErrorLabel=Please enter a valid email address
 auth.login.passwordLabel=Password
 auth.login.submitLoginLabel=Login
 
