Profile page is beginning to take shape

--- a/Gilbert/src/main/resources/i18n/messages.properties
+++ b/Gilbert/src/main/resources/i18n/messages.properties
@@ -40,3 +40,6 @@ profile.menu.salesLabel=Sales
 profile.menu.ordersLabel=Orders
 profile.menu.infoLabel=Info
 profile.menu.helpLabel=Help
+profile.notFound.title=User not found
+profile.notFound.header=404 User not found
+profile.notFound.description=The requested user doesn't exist (yet).
