--- a/Gilbert/src/main/resources/i18n/messages.properties
+++ b/Gilbert/src/main/resources/i18n/messages.properties
@@ -38,8 +38,7 @@ profile.title=Profile
 profile.menu.postsLabel=Posts
 profile.menu.salesLabel=Sales
 profile.menu.ordersLabel=Orders
-profile.menu.infoLabel=Info
-profile.menu.helpLabel=Help
+profile.menu.favoritesLabel=Favorites
 profile.notFound.title=User not found
 profile.notFound.header=404 User not found
 profile.notFound.description=The requested user doesn't exist (yet).
